--- a/src/components/BtnKeys.css
+++ b/src/components/BtnKeys.css
@@ -1,5 +1,6 @@
 .numbers {
   background-color: #95410d;
+  border:none;
   color: #E1DFDE;
   height: 90px;
   display: flex;
@@ -10,5 +11,5 @@
 }
 .numbers:hover{
     box-shadow: inset 5px 5px 10px #70310A, inset -5px 5px 15px #B95314;
-
+  cursor: pointer;
 }
